--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@react-native-firebase/app": "^14.9.4",
     "@react-native-firebase/auth": "^14.9.4",
     "@react-native-firebase/database": "^14.9.4",
+    "@react-native-firebase/storage": "^14.9.4",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-image-picker": "^4.8.3",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0"
